--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <title>Постер</title>
   <link rel="stylesheet" type="text/css href="style.css"/>
 </head>
+
+                                                      
 <body>
-  <div class="block1">
-  </div>
+  <div class="block1"></div>
+  <p>hello</p>
 </body>
