--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" type="text/css href="style.css"/>
 </head>
 
-                                                      
+
 <body>
-  <div class="block1"></div>
-  <p>hello</p>
+  <header>
+  </header>
 </body>
