--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Постер</title>
-  <link rel="stylesheet" type="text/css href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 
