--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <header>
     <img src="img/logo.png" style="position:absolute;left:8px;top:76px">
+    <h1>Башкирский чат-бот для Telegram</h1>
   </header>
 </body>
