--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <header>
     <img src="img/logo.png" style="position:absolute;left:8px;top:76px">
-    <h1>Башкирский чат-бот для Telegram</h1>
+    <h1 style="position:absolute;left:161px;top:93px">Башкирский чат-бот для Telegram</h1>
   </header>
 </body>
