--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <head>
   <title>Постер</title>
-  <link rel="stylesheet" href="style.css" type="text/css"/>
+<!--  <link rel="stylesheet" href="style.css" type="text/css"/> !-->
+  <style>
+    header {
+      position:absolute;
+      width: 1683px;
+      height: 331px;
+      background: -moz-linear-gradient(top, rgba(91,155,213,1) 0%, rgba(109,166,218,0) 11%, rgba(255,255,255,0) 100%); 
+    }
+
+    h1 {
+      font-family: Calibri, sans-serif;
+      font-size: 41pt;
+      font-weight: bold;
+      color: #203864;
+    }
+    
+    .names {
+      font-family: Calibri, sans-serif;
+      font-size: 22pt;
+      color: #203864;
+    } 
+    
+  </style>
 </head>
 
 
@@ -9,5 +31,6 @@
   <header>
     <img src="img/logo.png" style="position:absolute;left:8px;top:76px">
     <h1 style="position:absolute;left:161px;top:93px">Башкирский чат-бот для Telegram</h1>
+    <p class="names"><b>Выполнила:</b> Анна Зуева, 2 курс</p>
   </header>
 </body>
