--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     h1 {
       font-family: Calibri, sans-serif;
-      font-size: 41pt;
+      font-size: 51pt;
       font-weight: bold;
       color: #203864;
     }
@@ -21,6 +21,9 @@
       font-family: Calibri, sans-serif;
       font-size: 22pt;
       color: #203864;
+      position: absolute;
+      left:311px;
+      top:83px
     } 
     
   </style>
@@ -30,7 +33,7 @@
 <body>
   <header>
     <img src="img/logo.png" style="position:absolute;left:8px;top:76px">
-    <h1 style="position:absolute;left:161px;top:93px">Башкирский чат-бот для Telegram</h1>
+    <h1 style="position:absolute;left:211px;top:53px">Башкирский чат-бот для Telegram</h1>
     <p class="names"><b>Выполнила:</b> Анна Зуева, 2 курс</p>
   </header>
 </body>
