--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       font-size: 60pt;
       font-weight: bold;
       color: #203864;
+      text-align: center;
+      position:absolute;
+      top:40px"
     }
     
     .names {
@@ -22,8 +25,8 @@
       font-size: 22pt;
       color: #203864;
       position: absolute;
-      left:553px;
-      top:180px
+      top: 180px;
+      text-align: center;
     } 
     
   </style>
@@ -33,7 +36,10 @@
 <body>
   <header>
     <img src="img/logo.png" style="position:absolute;left:8px;top:76px">
-    <h1 style="position:absolute;left:230px;top:40px">Башкирский чат-бот для Telegram</h1>
-    <p class="names"><b>Выполнила:</b> Анна Зуева, 2 курс</p>
+    <h1>Башкирский чат-бот для Telegram</h1>
+    <p class="names">
+      <b>Выполнила:</b> Анна Зуева, 2 курс
+      <b>Научный руководитель:</b> Борис Валерьевич Орехов
+    </p>
   </header>
 </body>
