--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img src="img/logo.png" style="position:absolute;left:8px;top:76px">
     <h1>Башкирский чат-бот для Telegram</h1>
     <p class="names">
-      <b>Выполнила:</b> Анна Зуева, 2 курс
+      <b>Выполнила:</b> Анна Зуева, 2 курс<br>
       <b>Научный руководитель:</b> Борис Валерьевич Орехов
     </p>
   </header>
