--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
   <header>
-    <img src="img/logo.png" style="position:absolute;left:8px;top:76px;z-index:1">
+    <img src="img/logo.png" style="position:absolute;left:8px;top:76px;z-index:1;">
     <h1>Башкирский чат-бот для Telegram</h1>
     <p class="names">
       <b>Выполнила:</b> Анна Зуева, 2 курс<br>
