--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       font-weight: bold;
       color: #203864;
       text-align: center;
-      top:40px"
+      top:40px;
+      z-index:2;
     }
     
     .names {
