--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       position:absolute;
       width: 1683px;
       height: 331px;
-      background: -moz-linear-gradient(top, rgba(91,155,213,1) 0%, rgba(109,166,218,0) 11%, rgba(255,255,255,0) 100%); 
+      background-image: url(img/line1.png);
+      background-repeat: no-repeat;
     }
 
     h1 {
