--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
       color: #203864;
       text-align: center;
       top:40px;
-      z-index:2;
     }
     
+    .logo {
+      background-image: url(img/logo.png);
+      width: 290px;
+      height: 206px;
+      position:absolute;
+      left:8px;
+      top:76px;
+    }
     .names {
       font-family: Calibri, sans-serif;
       font-size: 22pt;
@@ -35,7 +42,7 @@
 
 <body>
   <header>
-    <img src="img/logo.png" style="position:absolute;left:8px;top:76px;z-index:1;">
+    <div class="logo"></div>
     <h1>Башкирский чат-бот для Telegram</h1>
     <p class="names">
       <b>Выполнила:</b> Анна Зуева, 2 курс<br>
