--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       text-align: center;
     } 
     
+    .line2 {
+      width: 1683px;
+      height: 19px;
+      background-image: url(img/line2.png);
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 331px;
+    }
   </style>
 </head>
 
@@ -49,4 +57,5 @@
       <b>Научный руководитель:</b> Борис Валерьевич Орехов
     </p>
   </header>
+  <div class="line2"></div>
 </body>
