--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       font-weight: bold;
       color: #203864;
       text-align: center;
+      position: relative;
       top:40px;
     }
     
