--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       font-weight: bold;
       color: #203864;
       text-align: center;
-      position: relative;
+      position: absolute;
       top:40px;
     }
     
@@ -25,13 +25,13 @@
       background-image: url(img/logo.png);
       width: 290px;
       height: 206px;
-      position:absolute;
+      position: relative;
       left:8px;
       top:76px;
     }
     .names {
       font-family: Calibri, sans-serif;
-      font-size: 32pt;
+      font-size: 28pt;
       color: #203864;
       top: 150px;
       text-align: center;
@@ -57,6 +57,7 @@
       <b>Выполнила:</b> Анна Зуева, 2 курс<br>
       <b>Научный руководитель:</b> Борис Валерьевич Орехов
     </p>
+    <p class="school">Школа лингвистики НИУ ВШЭ, 2017
   </header>
   <div class="line2"></div>
 </body>
