--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       text-align: center;
       position: absolute;
       top:40px;
+      left: 0;
+      right: 0;
+      margin: auto;
     }
     
     .logo {
