--- a/index.html
+++ b/index.html
@@ -37,9 +37,17 @@
       font-family: Calibri, sans-serif;
       font-size: 28pt;
       color: #203864;
-      top: 150px;
+      top: 130px;
       text-align: center;
     } 
+    
+    .school {
+      font-family: Calibri, sans-serif;
+      font-size: 22pt;
+      color: #203864;
+      top: 150px;
+      text-align: center;
+    }
     
     .line2 {
       width: 1683px;
@@ -51,7 +59,7 @@
     }
   </style>
 </head>
-
+ 
 
 <body>
   <header>
@@ -61,7 +69,7 @@
       <b>Выполнила:</b> Анна Зуева, 2 курс<br>
       <b>Научный руководитель:</b> Борис Валерьевич Орехов
     </p>
-    <p class="school">Школа лингвистики НИУ ВШЭ, 2017
+    <p class="school">Школа лингвистики НИУ ВШЭ, 2017</p>
   </header>
   <div class="line2"></div>
 </body>
