--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@
       font-family: Calibri, sans-serif;
       font-size: 30pt;
       color: #203864;
-      top: 80px;
       text-align: center;
+      position: absolute;
+      top:80px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 1;
     } 
     
     .school {
       font-family: Calibri, sans-serif;
       font-size: 22pt;
       color: #203864;
-      top: 50px;
       text-align: center;
+      position: absolute;
+      top:100px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 1;
     }
     
     .line2 {
