--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
       cellpadding: 5;
     }
     
+    .maincolumn {
+      width: 841.5px;
+      height: 1936px;
+      
+    }
   </style>
-  
-  .maincolumn {
-    width: 841.5px;
-  }
   
 </head>
  
