--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
       width: 1683px;
       cellspacing: 0;
       cellpadding: 5;
+      bordercolor: #5B9BD5;
+      border: 2px;
     }
     
     .maincolumn {
       width: 841.5px;
       height: 1936px;
-      
+      border-radius: 20px;
     }
   </style>
   
@@ -106,9 +108,9 @@
   <!-- MAIN !-->
   <table class="maintable">
     <tr>
-      <td class="maincolumn" style="bgcolor:red">
+      <td class="maincolumn">
       </td>
-      <td class="maincolumn" style="bgcolor:aqua">
+      <td class="maincolumn">
       </td>
     </tr>
   </table>
