--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
   <table class="maintable">
     <tr>
       <td class="maincolumn">
+        <p>первая колонка</p>
       </td>
       <td class="maincolumn">
+        <p>вторая колонка</p>
       </td>
     </tr>
   </table>
