--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
       bordercolor: #5B9BD5;
       border: 5px;
       border-radius: 20px;
+      vertical-align: top;
+      text-align: center;
     }
     
     .maincolumn {
