--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       border-radius: 20px;
       vertical-align: top;
       text-align: center;
+      bgcolor: red;
     }
     
     .maincolumn {
