--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       top: 350px;
       width: 841.5px;
       height: 1936px;
+      background-color: red;
       bordercolor: #5B9BD5;
       border: 5px;
       border-radius: 20px
@@ -23,6 +24,7 @@
       left: 841.5px;
       width: 841.5px;
       height: 1936px;
+      background-color: aqua;
       bordercolor: #5B9BD5;
       border: 5px;
       border-radius: 20px
