--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     .firstcolumn {
       position: absolute;
       top: 350px;
-      width: 841.5px;
+      left: 33px
+      width: 797px;
       height: 1936px;
-      background-color: red;
       bordercolor: #5B9BD5;
-      border: 5px;
+      border-width: 5px;
       border-radius: 20px
     }
     
@@ -22,11 +22,10 @@
       position: absolute;
       top: 350px;
       left: 841.5px;
-      width: 841.5px;
+      width: 797px;
       height: 1936px;
-      background-color: aqua;
       bordercolor: #5B9BD5;
-      border: 5px;
+      border-width: 5px;
       border-radius: 20px
     }
   </style>
