--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     .firstcolumn {
       position: absolute;
       top: 350px;
-      left: 33px
+      left: 33px;
       width: 797px;
       height: 1936px;
       bordercolor: #5B9BD5;
