--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       left: 33px;
       width: 797px;
       height: 1936px;
-      bordercolor: #5B9BD5;
+      border-color: #5B9BD5;
       border-width: 10px;
       border-radius: 20px
     }
@@ -24,7 +24,7 @@
       left: 841.5px;
       width: 797px;
       height: 1936px;
-      bordercolor: #5B9BD5;
+      border-color: #5B9BD5;
       border-width: 10px;
       border-radius: 20px
     }
