--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       height: 1936px;
       border-color: #5B9BD5;
       border-width: 10px;
-      border-radius: 20px
+      border-radius: 20px;
     }
     
     .secondcolumn {
@@ -26,7 +26,7 @@
       height: 1936px;
       border-color: #5B9BD5;
       border-width: 10px;
-      border-radius: 20px
+      border-radius: 20px;
     }
   </style>
   
