--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       left: 841.5px;
       width: 797px;
       height: 1936px;
-      border-color: #5B9BD5;
-      border-width: 10px;
+      border: solid 5px black;
       border-radius: 20px;
     }
   </style>
