--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     .firstcolumn {
       position: absolute;
-      top: 350px;
+      top: 383px;
       left: 33px;
       width: 797px;
       height: 1936px;
@@ -20,11 +20,11 @@
     
     .secondcolumn {
       position: absolute;
-      top: 350px;
+      top: 383px;
       left: 841.5px;
       width: 797px;
       height: 1936px;
-      border: solid 5px black;
+      border: solid 5px #5B9BD5;
       border-radius: 20px;
     }
   </style>
