--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       border: solid 5px #5B9BD5;
       border-radius: 20px;
     }
+
+    h2 {
+      text-align: center;
+    }
   </style>
   
 </head>
@@ -46,6 +50,7 @@
   
   <!-- MAIN !-->
   <div class="firstcolumn">
+    <h2>Что такое чат-бот?</h2>
   </div>
   <div class="secondcolumn">
   </div>
