--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     }
 
     h2 {
+      font-family: Calibri, sans-serif;
+      font-size: 26pt;
+      color: #203864;
+      text-align: center;
+    }
+
+    .text {
+      font-size: 20pt;
+      color: #203864;
       text-align: center;
     }
   </style>
@@ -51,6 +60,11 @@
   <!-- MAIN !-->
   <div class="firstcolumn">
     <h2>Что такое чат-бот?</h2>
+    <p class="text">Чат-бот - это виртуальный собеседник, специальная</br>
+      компьютерная программа, которая взаимодействует с</br>
+      пользователем с помощью естественного языка и способна</br>
+      реагировать на команды пользователя. 
+    </p>
   </div>
   <div class="secondcolumn">
   </div>
