--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!-- MAIN !-->
   <div class="firstcolumn">
     <h2>Что такое чат-бот?</h2>
-    <p class="text">Чат-бот - это виртуальный собеседник, специальная</br>
+    <p class="text" style="position:relative;top:-5px;">Чат-бот - это виртуальный собеседник, специальная</br>
       компьютерная программа, которая взаимодействует с</br>
       пользователем с помощью естественного языка и способна</br>
       реагировать на команды пользователя. 
