--- a/index.html
+++ b/index.html
@@ -60,10 +60,17 @@
   <!-- MAIN !-->
   <div class="firstcolumn">
     <h2>Что такое чат-бот?</h2>
-    <p class="text" style="position:relative;top:-5px;">Чат-бот - это виртуальный собеседник, специальная</br>
+    <p class="text" style="position:relative;top:-12px;">
+      Чат-бот - это виртуальный собеседник, специальная</br>
       компьютерная программа, которая взаимодействует с</br>
       пользователем с помощью естественного языка и способна</br>
       реагировать на команды пользователя. 
+    </p>
+    <p class="text">
+      С появлением и усовершенствованием методов глубинного</br>
+      обучения стало возможным использовать не только готовые</br>
+      фразы в качестве ответов чат-бота на запросы пользователя, но</br>
+      и генерировать их на основе заранее обученной модели.
     </p>
   </div>
   <div class="secondcolumn">
