--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .text {
-      font-size: 18pt;
+      font-size: 17pt;
       color: #203864;
       text-align: center;
     }
@@ -66,7 +66,7 @@
       пользователем с помощью естественного языка и способна</br>
       реагировать на команды пользователя. 
     </p>
-    <p class="text">
+    <p class="text" style="position:relative;top:-15px;">
       С появлением и усовершенствованием методов глубинного</br>
       обучения стало возможным использовать не только готовые</br>
       фразы в качестве ответов чат-бота на запросы пользователя, но</br>
