--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .text {
-      font-size: 17pt;
+      font-size: 17.5pt;
       color: #203864;
       text-align: center;
     }
@@ -71,6 +71,10 @@
       обучения стало возможным использовать не только готовые</br>
       фразы в качестве ответов чат-бота на запросы пользователя, но</br>
       и генерировать их на основе заранее обученной модели.
+    </p>
+    <h2>Цель работы</h2>
+    <>
+      Создание чат-бота на башкирском языке в мессенджере Telegram.
     </p>
   </div>
   <div class="secondcolumn">
