--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
       и генерировать их на основе заранее обученной модели.
     </p>
     <h2>Цель работы</h2>
-    <>
+    <p class="text">
       Создание чат-бота на башкирском языке в мессенджере Telegram.
     </p>
+    <h2>Башкирский язык</h2>
   </div>
   <div class="secondcolumn">
   </div>
