--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .text {
-      font-size: 17.5pt;
+      font-size: 18pt;
       color: #203864;
       text-align: center;
     }
@@ -77,6 +77,14 @@
       Создание чат-бота на башкирском языке в мессенджере Telegram.
     </p>
     <h2>Башкирский язык</h2>
+    <ul>
+      <li class="text">
+         активно используется в Интернете</br>
+         (лидирует среди малых языков России по</br>
+         количеству постов в сети «ВКонтакте»,</br>
+         выкачанных проектом «Языки России» Школы</br>
+         лингвистики НИУ ВШЭ)
+      </li>
   </div>
   <div class="secondcolumn">
   </div>
