--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Постер</title>
+  <title>Башкирский чат-бот для Telegram</title>
   <link rel="stylesheet" href="style.css" type="text/css"/>
   <style>
     /* HEADER */
@@ -78,7 +78,7 @@
     </p>
     <h2>Башкирский язык</h2>
     <ul>
-      <li class="text">
+      <li class="text" style="text-align:right;position:relative;left:190px;">
          активно используется в Интернете</br>
          (лидирует среди малых языков России по</br>
          количеству постов в сети «ВКонтакте»,</br>
