--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
   <!-- MAIN !-->
   <div class="firstcolumn">
-    <h2>Что такое чат-бот?</h2>
+    <h2 style="position:relative;top:-15px;">Что такое чат-бот?</h2>
     <p class="text" style="position:relative;top:-12px;">
       Чат-бот - это виртуальный собеседник, специальная</br>
       компьютерная программа, которая взаимодействует с</br>
