--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <h2>Башкирский язык</h2>
     <ul>
-      <li class="text" style="text-align:right;position:relative;left:190px;">
+      <li class="text" style="text-align:left;position:relative;left:190px;">
          активно используется в Интернете</br>
          (лидирует среди малых языков России по</br>
          количеству постов в сети «ВКонтакте»,</br>
