--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       color: #203864;
       text-align: center;
     }
+    
+    .blueblock {
+      border-radius: 20px;
+      background-color: #4472C4;
+      width: 140px;
+      height: 57px;
+    }
   </style>
   
 </head>
@@ -77,6 +84,8 @@
       Создание чат-бота на башкирском языке в мессенджере Telegram.
     </p>
     <h2>Башкирский язык</h2>
+    <div class="blueblock" style="position:relative;">
+      <p>Алтайская языковая семья</p>
     <ul>
       <li class="text" style="text-align:left;position:relative;left:190px;">
          активно используется в Интернете</br>
