--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       Создание чат-бота на башкирском языке в мессенджере Telegram.
     </p>
     <h2>Башкирский язык</h2>
-    <ul>
+    <ul style='padding:0;margin-left:-5'>
       <li class="text" style="text-align:left;position:relative;left:190px;">
          активно используется в Интернете</br>
          (лидирует среди малых языков России по</br>
