--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
       color: #203864;
       text-align: center;
     }
+    
+    .family {
+      background-image: url(img/family.png);
+      width: 165px;
+      height: 192px;
+      position: relative;
+      left:10px;
+      top:550px;
+    }
       
   </style>
   
@@ -78,7 +87,8 @@
       Создание чат-бота на башкирском языке в мессенджере Telegram.
     </p>
     <h2>Башкирский язык</h2>
-    <ul style='padding:0;margin-left:-5'>
+    <div class="family"></div>
+    <ul style='padding:-5;margin-left:-5'>
       <li class="text" style="text-align:left;position:relative;left:190px;">
          активно используется в Интернете</br>
          (лидирует среди малых языков России по</br>
