--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       height: 192px;
       position: relative;
       left:10px;
-      top:10px;
+      top:-5px;
     }
       
   </style>
@@ -89,7 +89,7 @@
     <h2>Башкирский язык</h2>
     <div class="family"></div>
     <ul>
-      <li class="text" style="text-align:left;position:relative;left:195px;">
+      <li class="text" style="text-align:left;position:relative;left:195px;top:-150px;">
          активно используется в Интернете</br>
          (лидирует среди малых языков России по</br>
          количеству постов в сети «ВКонтакте»,</br>
