--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
     <h2>Башкирский язык</h2>
     <div class="family"></div>
     <ul>
-      <li class="text" style="text-align:left;position:relative;left:195px;top:-200px;">
+      <li class="text" style="text-align:left;position:relative;left:195px;top:-200px;margin-left:20px;">
          активно используется в Интернете</br>
-         (лидирует среди малых языков России по</br>
-         количеству постов в сети «ВКонтакте»,</br>
-         выкачанных проектом «Языки России» Школы</br>
-         лингвистики НИУ ВШЭ)
       </li>
+       <p class="text" style="text-align:left;position:relative;left:195px;top:-5px;">
+         (лидирует среди малых языков России по</br>
+          количеству постов в сети «ВКонтакте»,</br>
+          выкачанных проектом «Языки России» Школы</br>
+          лингвистики НИУ ВШЭ)
+       </p>
   </div>
   <div class="secondcolumn">
   </div>
