--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h2>Башкирский язык</h2>
     <div class="family"></div>
     <ul>
-      <li class="text" style="text-align:left;position:relative;left:195px;top:-200px;margin-left:20px;">
+      <li class="text" style="text-align:left;position:relative;left:195px;top:-200px;margin-left:40px;padding:0px;">
          активно используется в Интернете</br>
       </li>
        <p class="text" style="text-align:left;position:relative;left:185px;top:-190px;">
