--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
       left:10px;
       top:-35px;
     }
+    .family {
+      background-image: url(img/index.png);
+      width: 32px;
+      height: 28px;
+      position: relative;
+      left:200px;
+      top:0px;
+    }
       
   </style>
   
@@ -92,12 +100,13 @@
       <li class="text" style="text-align:left;position:relative;left:215px;top:-200px;padding-left:20px;">
          активно используется в Интернете</br>
       </li>
-       <p class="text" style="text-align:left;position:relative;left:199px;top:-224px;">
-         (лидирует среди малых языков России по</br>
-          количеству постов в сети «ВКонтакте»,</br>
-          выкачанных проектом «Языки России» Школы</br>
-          лингвистики НИУ ВШЭ)
-       </p>
+    <p class="text" style="text-align:left;position:relative;left:199px;top:-224px;">
+      (лидирует среди малых языков России по</br>
+      количеству постов в сети «ВКонтакте»,</br>
+      выкачанных проектом «Языки России» Школы</br>
+      лингвистики НИУ ВШЭ)
+    </p>
+    <div class="index"></div> 
   </div>
   <div class="secondcolumn">
   </div>
