--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       left:10px;
       top:-35px;
     }
-    .family {
+    .index {
       background-image: url(img/index.png);
       width: 32px;
       height: 28px;
