--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
       выкачанных проектом «Языки России» Школы</br>
       лингвистики НИУ ВШЭ)
     </p>
-    <div class="index"></div> 
+    <div class="index"></div>
+    <p class="text" style="text-align:left;position:relative;left:197px;top:10px;>
+      большой объем данных для обучения модели
+    </p>
   </div>
   <div class="secondcolumn">
   </div>
