--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
       лингвистики НИУ ВШЭ)
     </p>
     <div class="index"></div>
+    <p class="text" style="text-align:left;position:relative;left:190px;>
+      большой объем данных для обучения модели
+    </p>
   </div>
   <div class="secondcolumn">
   </div>
