--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="family"></div>
     <ul>
       <li class="text" style="text-align:left;position:relative;left:215px;top:-200px;padding-left:20px;">
-         активно используется в Интернете</br>
+         активно используется в Интернете
       </li>
     <p class="text" style="text-align:left;position:relative;left:197px;top:-224px;">
       (лидирует среди малых языков России по</br>
@@ -110,6 +110,7 @@
     <p class="text" style="text-align:left;position:relative;left:190px;>
       большой объем данных для обучения модели
     </p>
+    <h3>
   </div>
   <div class="secondcolumn">
   </div>
