--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
       лингвистики НИУ ВШЭ)
     </p>
     <div class="index"></div>
-    <p class="text" style="text-align:left;position:relative;left:190px;>
+    <p class="text" style="text-align:left;position:relative;left:190px;">
       большой объем данных для обучения модели
     </p>
-    <h3>
+    <h2>Методы</h2>
   </div>
   <div class="secondcolumn">
   </div>
