--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       лингвистики НИУ ВШЭ)
     </p>
     <div class="index"></div>
-    <p class="text" style="text-align:left;position:relative;left:190px;top:-200px;">
+    <p class="text" style="text-align:left;position:relative;left:200px;top:-260px;">
       большой объем данных для обучения модели
     </p>
-    <h2>Методы</h2>
+    <h2 style="top:-260px;">Методы</h2>
   </div>
   <div class="secondcolumn">
   </div>
