--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <li class="text" style="text-align:left;position:relative;left:215px;top:-200px;padding-left:20px;">
          активно используется в Интернете
       </li>
+    </ul>
     <p class="text" style="text-align:left;position:relative;left:197px;top:-224px;">
       (лидирует среди малых языков России по</br>
       количеству постов в сети «ВКонтакте»,</br>
@@ -54,11 +55,19 @@
       лингвистики НИУ ВШЭ)
     </p>
     <div class="index"></div>
-    <p class="text" style="text-align:left;position:relative;left:198px;top:-260px;">
+    <p class="text" style="text-align:left;position:relative;left:197px;top:-260px;">
       большой объем данных для обучения модели
     </p>
-    <h2 style="position:relative;top:-260px;">Методы</h2>
+    <h2 style="position:relative;top:-265px;">Методы</h2>
+    <ul>
+      <li class="text" style="text-align:left;position:relative;left:15px;top:-200px;">
+        генерация ответов на основе обученной модели (модель</br>
+        <i>sequence-to-sequence,</i> библиотека для глубинного обучения</br>
+        Tensorflow)
+      </li>
+    </ul>
   </div>
+
   <div class="secondcolumn">
   </div>
     
