--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
     </p>
     <h2 style="position:relative;top:-265px;">Методы</h2>
     <ul>
-      <li class="text" style="text-align:left;position:relative;left:15px;top:-200px;">
+      <li class="text" style="text-align:left;position:relative;left:8px;top:-250px;">
         генерация ответов на основе обученной модели (модель</br>
         <i>sequence-to-sequence,</i> библиотека для глубинного обучения</br>
         Tensorflow)
       </li>
     </ul>
+    <p class="text" style="text-align:left;position:relative;left:40px;top:-260px;">
+      Обучающие данные в виде: вопрос (в первом файле) \U+2014<br>
+      ответ (во втором файле).</br>
+      Построчно сопоставляется содержимое двух файлов.
+    </p>
   </div>
 
   <div class="secondcolumn">
