--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         Tensorflow)
       </li>
     </ul>
-    <p class="text" style="text-align:left;position:relative;left:40px;top:-260px;">
-      Обучающие данные в виде: вопрос (в первом файле) \U+2014<br>
+    <p class="text" style="text-align:left;position:relative;left:80px;top:-260px;">
+      Обучающие данные в виде: вопрос (в первом файле) —<br>
       ответ (во втором файле).</br>
       Построчно сопоставляется содержимое двух файлов.
     </p>
