--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <title>Башкирский чат-бот для Telegram</title>
   <link rel="stylesheet" href="style.css" type="text/css"/>
   <style>
-      
+.bot {
+     width: 191px;
+     height: 89px;
+     background-image: url(img/bot.png);
+     background-repeat: no-repeat;
+     position: relative;
+     top: 0px;
+   }
   </style>
   
 </head>
@@ -71,6 +78,7 @@
       ответ (во втором файле).</br>
       Построчно сопоставляется содержимое двух файлов.
     </p>
+    <div class="bot"></div>
   </div>
 
   <div class="secondcolumn">
