--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <link rel="stylesheet" href="style.css" type="text/css"/>
   <style>
 .bot {
-     width: 191px;
+     width: 791px;
      height: 89px;
      background-image: url(img/bot.png);
      background-repeat: no-repeat;
      position: relative;
-     top: 0px;
+     top: -250pxpx;
    }
   </style>
   
