--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      background-image: url(img/bot.png);
      background-repeat: no-repeat;
      position: relative;
-     top: -250pxpx;
+     top: 0px;
    }
   </style>
   
@@ -79,8 +79,17 @@
       Построчно сопоставляется содержимое двух файлов.
     </p>
     <div class="bot"></div>
+    <h3>Данные для обучения модели:</h3>
+    <ul>
+      <li class="text" style="text-align:left;position:relative;left:90px;top:-250px;list-style-type:square;">
+        коллекция постов и комментариев на башкирском</br>
+        языке из социальной сети «ВКонтакте» (собранная</br>
+        проектом «Языки России» Школы лингвистики</br>
+        НИУ ВШЭ)
+      </li>
+    </ul>
   </div>
-
+  
   <div class="secondcolumn">
   </div>
     
