--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    }
 
 .table1 {
+  position: relative;
+  top: -300px;
   border-collapse: collapse;
   border: 1px solid white;
   width:638px;
