--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 .table1 {
   position: relative;
   top: -300px;
+  align: center;
   border-collapse: collapse;
   border: 1px solid white;
   width:638px;
